# Babylon-Lite-Native-Layer

./: .gitignore  CMakeLists.txt  README.md
js/: anim-boxanimated.js  anim-cesiumman.js  anim-fox.js  build.mjs  cube.js  demo-littlest-tokyo.js  lite-boombox.js  lite-demo.js  package.json  tsconfig.json
js/bench/: scene200.js
js/legacy/: main.js  stress.js
js/lite/: animation.js  camera.js  core.js  engine.js  index.js  light.js  material.js  math.js  mesh.js  net.js  scene.js  texture.js
js/lite/loaders/: environment.js  gltf.js
js/src/babylon-lite/: animation.ts  camera.ts  clone.ts  engine.ts  index.ts  internal.ts  light.ts  material.ts  math.ts  mesh.ts  native.d.ts  net.ts  scene.ts  shadow.ts  texture.ts
js/src/babylon-lite/loaders/: environment.ts  gltf.ts
js/src/scenes/: anim-boxanimated.ts  anim-cesiumman.ts  anim-fox.ts  bench-csm-boombox.ts  bench-scene200.ts  demo-littlest-tokyo.ts  lite-boombox.ts  lite-demo.ts
js/tests/: manifest.json  scene1-boombox.js  scene10-pbr-rough.js  scene100-physics-collision.js  scene101-physics-trigger.js  scene102-physics-raycast.js  scene103-thin-instance-raycast.js  scene104-character-controller.js  scene105-moving-platform.js  scene106-prestep-motion-types.js  scene11-shark.js  scene110-rtt-override.js  scene111-light-selection.js  scene112-khr-texture-basisu.js  scene113-picking-precision.js  scene114-morph-skeleton-picking.js  scene115-alien-picking-frame100.js  scene116-shadow-depth-materials.js  scene12-shader-balls.js  scene120-gaussian-splatting.js  scene121-gs-update-data.js  scene122-gs-sog.js  scene123-gs-spz.js  scene124-gs-compressed-ply.js  scene125-gs-bake-transform.js  scene126-gs-material-plugin.js  scene127-gs-depth-rendering.js  scene128-gs-depth-rendering-alpha.js  scene129-gs-gpu-picking.js  scene13-pbr-spheres.js  scene14-flight-helmet.js  scene140-nme-pcf-alpha-discard-shadows.js  scene141-esm-material-casters.js  scene142-post-process-viewports.js  scene143-pipelined-post-processes.js  scene144-bloom-post-process.js  scene145-geometry-renderer.js  scene146-pbr-geometry-renderer.js  scene147-circle-of-confusion.js  scene148-depth-of-field.js  (+160 more)
shaders/: fs_cube.sc  fs_pbr.sc  fs_shadow.sc  varying.def.sc  varying_pbr.def.sc  varying_shadow.def.sc  varying_skinned.def.sc  vs_cube.sc  vs_pbr.sc  vs_shadow.sc  vs_skinned.sc
src/: bench.cpp  bench.h  gfx.cpp  gfx.h  lite.cpp  lite.h  main.cpp  mathx.h  native_window.cpp  native_window.h  scene.cpp  scene.h
src/js/: js_host.cpp  js_host.h  napi_helpers.h
tools/: gen_manifest.py  run_parity.py  translate_scenes.mjs
tools/bench/: run-bench.mjs  run-bench.ps1
